[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tinyllm"
version = "0.1.0"
description = "Lightweight OpenAI-compatible proxy with multi-provider automatic fallback"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/sstpnk/TinyLLM-proxy"

[tool.setuptools.packages.find]
include = ["tinyllm*"]
